[package]
name = "digimon"
version = "1.0.0"
authors = ["Richard Walters <rwalters@digitalstirling.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
maplit = "1.0"
once_cell = "1.4"
structopt = "0.3"
